ajout des fichiers constituants

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="image__accueil">
                     <div class="boite__image --ombreInterieure">
-                        <img src="images/580b57fbd9996e24bc43c051.png" class="--ombreExterieure" alt="profil">
+                        <img src="images/profil2.png" class="--ombreExterieure" alt="profil">
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
             <div class="conteneur--alignement">
                 <div class="img--profile">
                     <div class=" boite__image --ombreInterieure">
-                        <img src="images/580b57fbd9996e24bc43c051.png" alt="Profil" class="--ombreExterieure">
+                        <img src="images/profil2.png" alt="Profil" class="--ombreExterieure">
                     </div>
                     <div class="lien--reseau">
                         <a href="https://web.facebook.com/simeon.zilu" target="_blank"
@@ -441,7 +441,11 @@
             </div>
         </div>
     </section>
-    <footer><a href=""><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></a></footer>
+    <footer>
+        <a href=""><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></a>
+        <a href=""><i class="fas fa-moon"></i></a>
+        <a href=""><i class="far fa-eclipse-alt"></i></a>
+    </footer>
     <script src="/scripts/main.js"></script>
 </body>
 
