--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
                         recently with desktop publishing software like Aldus PageMaker including
                         versions of Lorem Ipsum.
                     </p>
-                    <a href="#" class="bouton --ombreExterieure survol">Telecharger CV</a>
-                    <a href="#" class="bouton --ombreExterieure survol">Embaucher</a>
+                    <div>
+                        <a href="#" class="bouton --ombreExterieure survol">Telecharger CV</a>
+                        <a href="#" class="bouton --ombreExterieure survol">Embaucher</a>
+                    </div>
                 </div>
             </div>
             <div class="conteneur--alignement">
