--- a/index.html
+++ b/index.html
@@ -379,6 +379,92 @@
             </div>
         </div>
     </section>
+
+    		<!--SECTION PROJECT-->
+		<section class="section--projet section">
+			<div class="conteneur">
+				<div class="conteneur--alignement">
+					<div class="section__titre">
+						<h2 data-entete="Projets">Derniers Travaux</h2>
+					</div>
+				</div>
+
+				<div class="conteneur--alignement elements--projet">
+					<div class="element--projet">
+						<div class="element--projet__interieur --ombreExterieure">
+							<div class="element--projet__img">
+								<img src="./images/cine.png" alt="projet" />
+								<a class="voir--projet" href="http://facebook.com">
+									Voir projet
+								</a>
+							</div>
+							<p class="element--projet__titre">Mon google</p>
+						</div>
+					</div>
+					<div class="element--projet">
+						<div class="element--projet__interieur --ombreExterieure">
+							<div class="element--projet__img">
+								<img src="./images/kda.jpg" alt="projet" />
+								<a class="voir--projet" href="http://facebook.com">
+									Voir projet
+								</a>
+							</div>
+							<p class="element--projet__titre">Mon terminal</p>
+						</div>
+					</div>
+					<div class="element--projet">
+						<div class="element--projet__interieur --ombreExterieure">
+							<div class="element--projet__img">
+								<img src="./images/portf.jpg" alt="projet" />
+								<a class="voir--projet" href="http://facebook.com">
+									Voir projet
+								</a>
+							</div>
+							<p class="element--projet__titre">Mon site</p>
+						</div>
+					</div>
+					<div class="element--projet">
+						<div class="element--projet__interieur --ombreExterieure">
+							<div class="element--projet__img">
+								<img src="./images/form.jpg" alt="projet" />
+								<a
+									class="voir--projet"
+									href="https://excalibursims.github.io/Projet4/"
+								>
+									Voir projet
+								</a>
+							</div>
+							<p class="element--projet__titre">SimplonLine</p>
+						</div>
+					</div>
+					<div class="element--projet">
+						<div class="element--projet__interieur --ombreExterieure">
+							<div class="element--projet__img">
+								<img src="./images/jar.jpg" alt="projet" />
+								<a class="voir--projet" href="https://simsfriends.netlify.app/">
+									Voir projet
+								</a>
+							</div>
+							<p class="element--projet__titre">Error 404</p>
+						</div>
+					</div>
+					<div class="element--projet">
+						<div class="element--projet__interieur --ombreExterieure">
+							<div class="element--projet__img">
+								<img src="./images/listecontatc.jpg" alt="projet" />
+								<a
+									class="voir--projet"
+									href="https://excalibursims.github.io/ProjetKDA6/"
+								>
+									Voir projet
+								</a>
+							</div>
+							<p class="element--projet__titre">Sims</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
     <!--
         SECTION CONTACT
     -->
