--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             </div>
             <div class="conteneur--alignement">
                 <div class="tab--competence">
-                    <span class="--ombreExterieure tab--element active" data-objetif=".skills">Skills</span>
-                    <span class="--ombreExterieure tab--element" data-objetif=".experience">Experience</span>
+                    <div class="--ombreExterieure tab--element active" data-objetif=".skills">Compétences</div>
+                    <div class="--ombreExterieure tab--element" data-objetif=".experience">Experiences</div>
                 </div>
             </div>
             <!-- debut skill-->
@@ -170,7 +170,7 @@
                             </div>
                         </div>
                         <div class="element--capacite">
-                            <p>JavaScript</p>
+                            <p>ReactJS</p>
                             <div class="progression --ombreInterieure">
                                 <div class="barre--progression">
                                     <span>60%</span>
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                         <div class="element--capacite">
-                            <p>SASS</p>
+                            <p>JavaScript</p>
                             <div class="progression --ombreInterieure">
                                 <div class="barre--progression">
                                     <span>50%</span>
@@ -194,7 +194,7 @@
                             </div>
                         </div>
                         <div class="element--capacite">
-                            <p>ActionScript</p>
+                            <p>NodeJS</p>
                             <div class="progression --ombreInterieure">
                                 <div class="barre--progression">
                                     <span>50%</span>
@@ -252,20 +252,6 @@
                                         <i class="fas fa-briefcase icon"></i>
                                         <span>01/02/2021</span>
                                         <h3>Gestion de projet</h3>
-                                        <h4>Kinshasa digital</h4>
-                                        <p>
-                                            remaining essentially unchanged. It was popularised in the 1960s with
-                                            the release of Letraset sheets containing Lorem Ipsum passages, and more
-                                            recently with desktop publishing software like Aldus PageMaker including
-                                            versions of Lorem Ipsum.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="separateur--element">
-                                    <div class="separateur--element--interieur --ombreExterieure">
-                                        <i class="fas fa-briefcase icon"></i>
-                                        <span>01/02/2021</span>
-                                        <h3>Full stack</h3>
                                         <h4>Kinshasa digital</h4>
                                         <p>
                                             remaining essentially unchanged. It was popularised in the 1960s with
