--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                         </div>
                         <div class="conteneur--alignement">
                             <div class="bouton__submit">
-                                <button type="submit" class="bouton --ombreExterieure survol">Envoyer message</button>
+                                <button type="submit" class="bouton --ombreExterieure survol">Envoyer</button>
                             </div>
                         </div>
                     </form>
@@ -516,7 +516,7 @@
         </div>
     </section>
     <footer>
-
+    
     </footer>
 </body>
 
