--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
             <div class="conteneur--alignement">
                 <div class="tab--competence">
-                    <div class="--ombreExterieure tab--element active" data-objetif=".skills">Compétences</div>
+                    <div class="--ombreExterieure tab--element active" id="bouton bouton-competence" data-objetif=".skills">Compétences</div>
                     <div class="--ombreExterieure tab--element" data-objetif=".experience">Experiences</div>
                 </div>
             </div>
@@ -518,6 +518,7 @@
     <footer>
     
     </footer>
+    <script src="./script/main.js"></script>
 </body>
 
 </html>
